Fix navigator on Firefox and Edge

--- a/sass/navigator.scss
+++ b/sass/navigator.scss
@@ -22,6 +22,7 @@
 .navigator__back {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   padding: 18px 16px;
